--- a/app/src/main/res/layout/item_restaurant.xml
+++ b/app/src/main/res/layout/item_restaurant.xml
@@ -3,13 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:clickable="true"
+    android:focusable="true"
+    android:background="@drawable/bg_item_rippled_white_background">
 
     <ImageView
         android:id="@+id/restaurant_iv"
-        android:layout_width="64dp"
-        android:layout_height="64dp"
-        android:layout_margin="16dp"
+        android:layout_width="@dimen/restaurant_image_size"
+        android:layout_height="@dimen/restaurant_image_size"
+        android:layout_margin="@dimen/padding_medium"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -18,9 +21,10 @@
 
     <TextView
         android:id="@+id/restaurant_name_tv"
+        style="@style/TextAppearance.Title"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="16dp"
+        android:layout_marginHorizontal="@dimen/padding_medium"
         android:ellipsize="end"
         android:lines="1"
         app:layout_constraintEnd_toStartOf="@id/favourite_iv"
@@ -31,6 +35,7 @@
 
     <TextView
         android:id="@+id/restaurant_description_tv"
+        style="@style/TextAppearance.Body2"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:ellipsize="end"
@@ -43,6 +48,7 @@
 
     <TextView
         android:id="@+id/restaurant_address_tv"
+        style="@style/TextAppearance.Body4"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:ellipsize="end"
@@ -55,10 +61,12 @@
 
     <ImageView
         android:id="@+id/favourite_iv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="@dimen/restaurant_favourite_icon_size"
+        android:layout_height="@dimen/restaurant_favourite_icon_size"
         tools:src="@drawable/ic_favorite"
-        android:layout_margin="16dp"
+        android:clickable="true"
+        android:focusable="true"
+        android:layout_margin="@dimen/padding_medium"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -67,10 +75,9 @@
     <View
         android:layout_width="0dp"
         android:layout_height="1dp"
-        android:background="#0000ff"
+        android:background="@color/gray"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="@id/restaurant_name_tv"
         app:layout_constraintEnd_toEndOf="parent"/>
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
